fixer des bugs +bug restant (assignation du plan a un AgentInventaire)